--- a/Turing-course.ipynb
+++ b/Turing-course.ipynb
@@ -5,7 +5,65 @@
    "id": "45fc64df",
    "metadata": {},
    "source": [
-    "# Introduction to Python using Turing patterns"
+    "# Introduction to Python with Turing patterns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0deffdb",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction\n",
+    "Turing patterns were introduced by Alan Turing in the article [The Chemical Basis of Morphogenesis](https://www.dna.caltech.edu/courses/cs191/paperscs191/turing.pdf).\n",
+    "They will not been much discussed here but fill free to ask questions or to look over [there](https://en.wikipedia.org/wiki/Reaction%E2%80%93diffusion_system) for more information.\n",
+    "\n",
+    "What is important to keep in mind is that a Turing pattern is the result of the interaction between an activator and its inhibitor and their co-diffusion across a set of cells.\n",
+    "\n",
+    "It is this interaction and diffusion that we will model in this course. We will also learn how to represent these patterns.\n",
+    "\n",
+    "A little bit of knowledge about how to model these interactions is necessary to better understand the remaining of the course.\n",
+    "First, we will be talking about an activator that will name $A$ and an inhibitor that will name $I$. Their concentration values will be refered to as $a$ and $i$ respectively.\n",
+    "\n",
+    "The gene regulation network that we are considering here is the simple one where $A$ auto-activates and activates $I$ and $I$ inhibits $A$:\n",
+    "\n",
+    "<img src=\"Images/GRN.png\" alt=\"Gene Regulation Network\" width=\"200\"/>\n",
+    "\n",
+    "> _**To go a little bit further (not necessary):**_\n",
+    "> \n",
+    "> From this network, we can extrat activator $A$ and an inhibitor $I$ interactions as follow:\n",
+    "> \n",
+    "> $A \\rightarrow A$ ($A$ is auto activated)\n",
+    "> \n",
+    "> $A \\rightarrow I$ ($A$ activates $I$)\n",
+    "> \n",
+    "> $I \\dashv A$ ($I$ inhibits $A$)\n",
+    "> \n",
+    "> These interactions can be modeled multiple ways\n",
+    "> Resulting in the following equations:\n",
+    "> \n",
+    "> $\\frac{\\delta a}{\\delta t} = d_a\\Delta a + a - a^3 - i + k$ [1]\n",
+    "> \n",
+    "> $\\tau \\frac{\\delta i}{\\delta t} = d_i\\Delta i + a - i$ [2]\n",
+    "> \n",
+    "> These are partial differential equations that represent the change of concentration of $A$ ($\\delta a$) or $I$ ($\\delta i$) when the time changes by a small amount ($\\delta t$).\n",
+    ">\n",
+    "> In function [1], $\\Delta a$ is the potential diffusion $A$ and $d_a$ is the diffusion coefficient.\n",
+    "> $+ a$ is the auto-activation of $A$, $-a^3$ is the degradation, $-i$ is the inhibition from $I$ and $k$ is a constant.\n",
+    ">\n",
+    "> In function [2], $\\Delta i$ is the potential diffusion of $I$ and $d_i$ is the diffusion coefficient.\n",
+    "> $+a$ is the activation from $A$ and $-i$ is the degradation.\n",
+    "\n",
+    "It is important to know that to model the previous network it is necessary to remember that some values need to be decided:\n",
+    "- the diffusion coefficients $d_a$ and $d_i$ (refered to as `d_a` and `d_i` in the code)\n",
+    "- the constant $\\tau$ (refered to as `tau`)\n",
+    "- the constant $k$ (refered to as `k`)\n",
+    "\n",
+    "Moreover other values are necessary for the computation also need to be decided:\n",
+    "- the size of the grid we will be working on (`size`)\n",
+    "- the distance between two cells (ie the space step: `dx` and `dy`)\n",
+    "- the total time of the simulation (`T`)\n",
+    "- the time step for the simulation (`dt`)\n",
+    "- the number of iterations (`n`, which is determined by the ratio of `T` over `dt`)"
    ]
   },
   {
@@ -13,35 +71,258 @@
    "id": "f2eda5a7",
    "metadata": {},
    "source": [
-    "## Variables\n",
-    "Variables are symbolics names for information.\n",
+    "## 2. Variables\n",
+    "Variables are symbolic names where information or values can be stored.\n",
     "\n",
-    "For example a "
+    "They are the cornerstone of coding, they allow to store in memory values and to access them later on. In our example the variables have been decribed earlier (`d_a`, `tau`, `size`, ...)\n",
+    "\n",
+    "To assign an information to a variable, the `=` operator is used.\n",
+    "\n",
+    "---\n",
+    "⚠️ be careful, `=` is the assignment operator. To check the equality between two variable, the required operator is `==` ⚠️\n",
+    "\n",
+    "---\n",
+    "\n",
+    "For example after the following line of code is ran:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "831989c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_number = 0\n",
+    "a_number = 10\n",
+    "another_number = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e9198d",
+   "metadata": {},
+   "source": [
+    "The variable `a_number` used to contain the value `0` and now contains the value `10`.\n",
+    "\n",
+    "The variable `another_number` contains the values `1`.\n",
+    "\n",
+    "It is possible to print what is contained in a variable using the fuction `print`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e31c1885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_number --> 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'a_number --> {a_number}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2baf5349",
+   "metadata": {},
+   "source": [
+    "The content of a variable can be stored in another variable and then changed without altering it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fb6fb574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "another_number --> 5\n",
+      "a_number --> 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_number = 5\n",
+    "another_number = a_number\n",
+    "a_number = 1\n",
+    "print(f'another_number --> {another_number}')\n",
+    "print(f'a_number --> {a_number}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe69e0a",
+   "metadata": {},
+   "source": [
+    "Variables can contain most (computational) things (especially in Python).\n",
+    "For example they can contain different types of data such as `list`, `dictionary` or `ndarray` (we will see what they are right after)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b42be7b",
+   "metadata": {},
+   "source": [
+    "### 1.1 Exercices:\n",
+    "Before any exercice, import the `Correction` module which allows you to check out the correction of the exercices the following way:\n",
+    "```python\n",
+    "Correction(<exo_num>)\n",
+    "```\n",
+    "You can import the function as shown just bellow. It needs to be imported only once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "61b43c36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Resources.Answers import answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "357f2d7c",
+   "metadata": {},
+   "source": [
+    "#### Exercice 1:\n",
+    "Set the value of the variables necessary for the model as follow:\n",
+    "- a: 0.0002.8\n",
+    "- b: 0.005\n",
+    "- tau: 0.1\n",
+    "- k: -0.005\n",
+    "- size: 100 \n",
+    "- dx: 2 divided by the size of the grid\n",
+    "- T: 9\n",
+    "- dt: 0.001\n",
+    "- n: number of iterations which is the total time `T` divided by the time step `dt`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "831989c5",
+   "id": "4e33ad64",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Write the answer of the previous question here.\n",
+    "# You can check the answer by running answer(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a7be3b",
+   "metadata": {},
+   "source": [
+    "#### Exercice 2:\n",
+    "Given a variable `nb1` and a variable `nb2`, put the values of each other variables in the other one\n",
+    "\n",
+    "(Note that we are using the library `random` to generate random numbers)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c217976",
+   "execution_count": 9,
+   "id": "f12a5734",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nb1 before: 5\n",
+      "nb2 before: 5\n",
+      "nb1 after: 5\n",
+      "nb2 after: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint # To generate random numbers so you can't really cheat\n",
+    "nb1 = randint(0, 5)\n",
+    "nb2 = randint(5, 10)\n",
+    "print(f'nb1 before: {nb1}')\n",
+    "print(f'nb2 before: {nb2}')\n",
+    "'''\n",
+    "To do: swap a and b values\n",
+    "'''\n",
+    "print(f'nb1 after: {nb1}')\n",
+    "print(f'nb2 after: {nb2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12768ce3",
+   "metadata": {},
+   "source": [
+    "## Data structures\n",
+    "When coding, different type of data can be used. For example we already saw few types of data:\n",
+    "- Integers (refered to as `int` in Python): `0`, `1`, `-10`, ...\n",
+    "- Floating numbers (refered to as `float` in Python): `0.01`, `1.0`, `1.2e10`, ...\n",
+    "\n",
+    "But of course other data types exist:\n",
+    "- Lists (`list`): `[1, 2, 3]`, `[1, None, 0.4]`, `[1, [1, 2], [3], ['Hello'], 'World']`, ...\n",
+    "- Tuples (`tuple`): `(1, 2, 3)`, `(1, None, 0.4)`, ...\n",
+    "- Dictionaries (`dict`): `{'a': 10, 3:[2, 3, 4], '5': -0.2}`, ...\n",
+    "\n",
+    "As their name suggest a `list` allows to store a list of elements that can then be accessed via their position, starting at `0`.\n",
+    "\n",
+    "There is a lot of possible operations on lists that can be found [there](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e31c1885",
+   "execution_count": 20,
+   "id": "661a5403",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1[0] --> 1\n",
+      "l1[0] --> 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, [1, 2], [3], ['Hello'], 'World')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3, 4]\n",
+    "print(f'l1[0] --> {l1[0]}')\n",
+    "print(f'l1[0] --> {l1[3]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e34b0d59",
+   "metadata": {},
+   "source": [
+    "## 3. Conditional statements\n",
+    "Another important part of coding are the conditional statements.\n",
+    "\n",
+    "Conditional statements allow you to perform a given set of instruction(s) when if a statement is true.\n",
+    "If necessary, it is possible to run a different set of instructions when the statement is false."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +595,7 @@
    "id": "c9c94453",
    "metadata": {},
    "source": [
-    "Carefully chosen parameters, thanks to Alice Gros in [@Equipe_lenne](https://twitter.com/Equipe_lenne)"
+    "Carefully chosen parameters, thanks to [Alice Gros](https://twitter.com/_AliceGros) in [@Equipe_lenne](https://twitter.com/Equipe_lenne)"
    ]
   },
   {
@@ -483,7 +764,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -497,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
