small morning update

--- a/Turing-course.ipynb
+++ b/Turing-course.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "> _**To go a little bit further (not necessary):**_\n",
     "> \n",
-    "> From this network, we can extrat activator $A$ and an inhibitor $I$ interactions as follow:\n",
+    "> From this network, we can extrat the interaction between activator $A$ and an inhibitor $I$ as follow:\n",
     "> \n",
     "> $A \\rightarrow A$ ($A$ is auto activated)\n",
     "> \n",
@@ -47,13 +47,13 @@
     "> \n",
     "> These are partial differential equations that represent the change of concentration of $A$ ($\\delta a$) or $I$ ($\\delta i$) when the time changes by a small amount ($\\delta t$).\n",
     ">\n",
-    "> In function [1], $\\Delta a$ is the potential diffusion $A$ and $d_a$ is the diffusion coefficient.\n",
+    "> In equation [1], $\\Delta a$ is the potential diffusion $A$ and $d_a$ is the diffusion coefficient.\n",
     "> $+ a$ is the auto-activation of $A$, $-a^3$ is the degradation, $-i$ is the inhibition from $I$ and $k$ is a constant.\n",
     ">\n",
-    "> In function [2], $\\Delta i$ is the potential diffusion of $I$ and $d_i$ is the diffusion coefficient.\n",
+    "> In equation [2], $\\Delta i$ is the potential diffusion of $I$ and $d_i$ is the diffusion coefficient.\n",
     "> $+a$ is the activation from $A$ and $-i$ is the degradation.\n",
     "\n",
-    "It is important to know that to model the previous network it is necessary to remember that some values need to be decided:\n",
+    "It is important to know that to model the previous network it is necessary to decide on some values, the parameters of the model:\n",
     "- the diffusion coefficients $d_a$ and $d_i$ (refered to as `d_a` and `d_i` in the code)\n",
     "- the constant $\\tau$ (refered to as `tau`)\n",
     "- the constant $k$ (refered to as `k`)\n",
