--- a/Turing-course.ipynb
+++ b/Turing-course.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## 1. Introduction\n",
-    "**First of, within this course [this page](https://docs.python.org/3/tutorial/index.html) will be mentioned a lot. It is a really good (but a bit crude) source for informations and it is the official Python page so it is also quite accurate.**\n",
+    "**First of, within this course [this page](https://docs.python.org/3/tutorial/index.html) will be mentioned a lot. It is a really good (maybe a bit crude) source for informations and it is the official Python page so it is also quite accurate.**\n",
     "\n",
     "### 1.1 Goal of this course\n",
     "This course aim at teaching the basics of coding using reaction diffusion simulations as a support, more specifically the Turing patterns.\n",
