--- a/Everything-in-one.ipynb
+++ b/Everything-in-one.ipynb
@@ -276,8 +276,8 @@
    "id": "5b42be7b",
    "metadata": {},
    "source": [
-    "### 2.1 Exercices:\n",
-    "Before any exercice, import the `Correction` module which allows you to check out the correction of the exercices the following way:\n",
+    "### 2.1 Exercises:\n",
+    "Before any exercise, import the `Correction` module which allows you to check out the correction of the exercises the following way:\n",
     "```python\n",
     "Correction(<exo_num>)\n",
     "```\n",
@@ -299,7 +299,7 @@
    "id": "357f2d7c",
    "metadata": {},
    "source": [
-    "#### Exercice 1\n",
+    "#### Exercise 1\n",
     "Set the value of the variables necessary for the model as follow:\n",
     "- mu_a: 0.0002.8\n",
     "- mu_i: 0.005\n",
@@ -329,7 +329,7 @@
    "id": "b7a7be3b",
    "metadata": {},
    "source": [
-    "#### Exercice 2\n",
+    "#### Exercise 2\n",
     "Given a variable `nb1` and a variable `nb2`, put the values of each other variables in the other one\n",
     "\n",
     "(Note that we are using the library `random` to generate random numbers)"
@@ -665,9 +665,9 @@
     ">\n",
     "> You can find more information about `ndarray` [there](https://numpy.org/doc/stable/reference/arrays.ndarray.html)\n",
     ">\n",
-    "> If you want to learn interactively about `ndarray`, you can check out the [following exercices](https://www.machinelearningplus.com/python/101-numpy-exercises-python/).\n",
+    "> If you want to learn interactively about `ndarray`, you can check out the [following exercises](https://www.machinelearningplus.com/python/101-numpy-exercises-python/).\n",
     "\n",
-    "Note that the previous exercices are not required but they could be very useful for the following classes.\n",
+    "Note that the previous exercises are not required but they could be very useful for the following classes.\n",
     "\n",
     "To use `ndarray`, it is necessary to load the NumPy library (and therefore for it to be installed):"
    ]
@@ -1105,16 +1105,16 @@
    "id": "520c7851",
    "metadata": {},
    "source": [
-    "## 4. Some exercices\n",
+    "## 4. Some exercises\n",
     "---\n",
-    "Now, you should have enough to go through a small batch of exercices 🥳 🥳 🥳.\n",
+    "Now, you should have enough to go through a small batch of exercises 🥳 🥳 🥳.\n",
     "\n",
     "They might be a bit hard, but that's normal, please don't hesitate to ask us if you have any trouble understanding something.\n",
     "\n",
     "The answers are still accessible using the `answer` function with the number of the question as an argument.\n",
     "Also, for some of the following questions, hints are available, run the command `hint(<question_number>)` to access the hint. For example, for a hint for question 3, you can run `hint(3)`.\n",
     "\n",
-    "Moreover, you will need a bit of help for the next exercices so we wrote some functions that will be useful.\n",
+    "Moreover, you will need a bit of help for the next exercises so we wrote some functions that will be useful.\n",
     "We will describe how they work and how to use them.\n",
     "To load the said function, please run the line below.\n",
     "\n",
@@ -1163,7 +1163,7 @@
    "id": "86128ed1",
    "metadata": {},
    "source": [
-    "### \"Small\" exercice that does not count\n",
+    "### \"Small\" exercise that does not count\n",
     "\n",
     "Write a loop that computes the sum of the even numbers between 0 and 30."
    ]
@@ -1185,7 +1185,7 @@
    "source": [
     "Before creating a working 2D Turing pattern, let work out how to make the concentration within a given cell change over time according to the function we defined earlier.\n",
     "\n",
-    "### Exercice 3\n",
+    "### Exercise 3\n",
     "Write a loop that increments the concentration value of the concentration `a` according to the function `da_alone`.\n",
     "\n",
     "The function `da_alone` implements the change of concentration ($\\delta a$) according to $a$, $\\delta t$ and $k$:\n",
@@ -1213,7 +1213,7 @@
    "id": "756789b4",
    "metadata": {},
    "source": [
-    "### Exercice 3 (bonus)\n",
+    "### Exercise 3 (bonus)\n",
     "If you feel like it, you can write the function `da_alone`.\n",
     "\n",
     "For a solution you can type `da_alone??` to have access to its implementation."
@@ -1234,7 +1234,7 @@
    "id": "36e5e15b",
    "metadata": {},
    "source": [
-    "### Exercice 4\n",
+    "### Exercise 4\n",
     "Now we have access to the last value of the concentration but we would like to be able to access all the values in order to plot them.\n",
     "\n",
     "To do so, write a piece of code that stores all the intermediary results in a list."
@@ -1275,7 +1275,7 @@
    "id": "621ea709",
    "metadata": {},
    "source": [
-    "### Exercice 5\n",
+    "### Exercise 5\n",
     "Now that we know how to compute the evolution of a given concentration, we want to compute the co-evolution of an activator and its inhibitor.\n",
     "\n",
     "To do so we can use the functions `da` and `di` that implements the following equations:\n",
@@ -1447,7 +1447,7 @@
    "id": "7855f443",
    "metadata": {},
    "source": [
-    "### Exercice 6\n",
+    "### Exercise 6\n",
     "Write a function that returns the lists of concentrations `A` and `I` given the parameters `dt`, `k`, `tau` and `n` and the initial concentrations `a` and `i`."
    ]
   },
@@ -1527,7 +1527,7 @@
    "id": "308f4e1d",
    "metadata": {},
    "source": [
-    "### Exercice 7\n",
+    "### Exercise 7\n",
     "**(With an intermezzo about file manipulation)**\n",
     "\n",
     "You can play with the different parameters to see how the concentration dynamics change according to these parameters.\n",
@@ -1538,7 +1538,7 @@
     "If you set its value to the file name and path you want to create, it will save it there under its name.\n",
     "\n",
     "Before being able to do so, you might need some information about how to manipulate strings.\n",
-    "In the previous exercices you might have seen that it is possible to insert values from variables within a string using the curved brackets `{` and `}`.\n",
+    "In the previous exercises you might have seen that it is possible to insert values from variables within a string using the curved brackets `{` and `}`.\n",
     "\n",
     "Simply put, the way it works is by putting the character `f` before your string and then everything within curved brackets will be transformed into string if possible.\n",
     "For example:\n",
@@ -1727,18 +1727,18 @@
    "id": "3fe7da7b",
    "metadata": {},
    "source": [
-    "### Exercice 8\n",
-    "**This exercice is difficult, it might take a bit longer to solve. If you are stuck, don't hesitate to look at the following cells for some help**\n",
+    "### Exercise 8\n",
+    "**This exercise is difficult, it might take a bit longer to solve. If you are stuck, don't hesitate to look at the following cells for some help**\n",
     "\n",
-    "For this exercice, we will discuss about file manipulation, in other words how to move files automatically.\n",
+    "For this exercise, we will discuss about file manipulation, in other words how to move files automatically.\n",
     "\n",
-    "**Attention here! Proceed with caution for this exercice but also in general. Files removed using Python (or the shell for example) do not end up in the trash but are directly removed!**\n",
+    "**Attention here! Proceed with caution for this exercise but also in general. Files removed using Python (or the shell for example) do not end up in the trash but are directly removed!**\n",
     "\n",
-    "In this exercice we would like to sort the files created in the previous exercice. We would like to group the plots generated previously in folders by values of `k` and so that the folders are named according to that `k` value.\n",
+    "In this exercise we would like to sort the files created in the previous exercise. We would like to group the plots generated previously in folders by values of `k` and so that the folders are named according to that `k` value.\n",
     "\n",
-    "For example if you had the following files in your `exercice_7` folder:\n",
+    "For example if you had the following files in your `exercise_7` folder:\n",
     "```\n",
-    "exercice_7:\n",
+    "exercise_7:\n",
     " | k0_tau0.png\n",
     " | k0_tau1.png\n",
     " | k0_tau2.png\n",
@@ -1751,7 +1751,7 @@
     "```\n",
     "We would like you to create the following hierarchy:\n",
     "```\n",
-    "exercice_7:\n",
+    "exercise_7:\n",
     " | k0:\n",
     "   | k0_tau0.png\n",
     "   | k0_tau1.png\n",
@@ -1794,8 +1794,8 @@
    "id": "60aa0ed9",
    "metadata": {},
    "source": [
-    "### Help for exercice 8\n",
-    "Because the difficulty increased significantly with this exercice, here are some leads that hopefully will help you solve the exercice!\n",
+    "### Help for exercise 8\n",
+    "Because the difficulty increased significantly with this exercise, here are some leads that hopefully will help you solve the exercise!\n",
     "\n",
     "One way to solve a coding problem is to decompose it in multiple smaller problems.\n",
     "There are often multiple ways to decompose a problem, we will show you one here, it might not be the optimal one (regardless of the optimal metric used) but it should be a working one.\n",
@@ -1851,7 +1851,7 @@
     "\n",
     "To initialise an `ndarray` it is necessary to set its size. In our case, it will be the number of cells `size` and the number of time points `n`.\n",
     "\n",
-    "### Exercice 9\n",
+    "### Exercise 9\n",
     "Using the function `np.zeros` build an array named `A` (for activator) of dimensions `size * n`"
    ]
   },
@@ -1885,7 +1885,7 @@
     "\n",
     "For example `A[0, 100]` gives you the concentration of the cell `0` at time-point `100`. It is sometimes confusing to me whether the cell is first or the gene concentration. One way to remember is to look at the `shape` of the table (which is its dimension). Here the shape is `(100, 9000)`, so the first component is the cell (since there are 100 of them).\n",
     "\n",
-    "### Exercice 10\n",
+    "### Exercise 10\n",
     "\n",
     "Access the values of the 4 first time-points for the last 3 cells"
    ]
@@ -2047,7 +2047,7 @@
     ">\n",
     "> For reasons that we will not expose here, it can be mathematically proven that any known random distribution can be simulated using a uniform distribution in [0, 1), (`)` means the 1 is excluded).\n",
     "\n",
-    "### Exercice 11\n",
+    "### Exercise 11\n",
     "Now, we want to fill the values, at the first time point, for all the cells with random floating numbers between 0 and 1.\n",
     "> Notice the line `np.random.seed(0)`, it allows to control the \"randomness\" of the generation so you can compare your result to what should be expected"
    ]
@@ -2099,7 +2099,7 @@
    "source": [
     "Now we have initialised our array for the activator with random values at the first time-point. Remains to fill the other time-points but to do so, one has to first initialise the inhibitor array.\n",
     "\n",
-    "### Exercice 12\n",
+    "### Exercise 12\n",
     "Initialise the inhibitor array `I` as you did for the activator array (we will fixe our seed to 1 this time to have different values)"
    ]
   },
@@ -2157,7 +2157,7 @@
     "\n",
     "As a reminder, the function `compute_AI` takes as an input the parameters of the model (`dt`, `k`, `tau` and `n`) together with initial values of activator and inhibitor concentrations and returns a list of the evolution of all the `n` values over time.\n",
     "\n",
-    "### Exercice 13\n",
+    "### Exercise 13\n",
     "Write a `for` loop that fills all the array cells using the function `compute_AI`"
    ]
   },
@@ -2343,7 +2343,7 @@
    "id": "8312b728",
    "metadata": {},
    "source": [
-    "### Exercice 14 (kind of a tough one 😨)\n",
+    "### Exercise 14 (kind of a tough one 😨)\n",
     "\n",
     "Because we are adding a new dimension to our problem, most of what we have developed until now becomes obsolete ...\n",
     "\n",
@@ -2429,7 +2429,7 @@
     "Now, the function `dA_I` gives us the value of `A` and `I` from one time to the next with lateral diffusion.\n",
     "The next step is to write a `for` loop that allows to compute our systems over all the necessary time-points.\n",
     "\n",
-    "### Exercice 15\n",
+    "### Exercise 15\n",
     "Write a `for` loop that computes the concentration of a row of cells over `n` time-points."
    ]
   },
@@ -2731,7 +2731,7 @@
    "id": "7edd2186",
    "metadata": {},
    "source": [
-    "### Exercice 16\n",
+    "### Exercise 16\n",
     "Write a function `diffusion` that takes as an input an array of cells `arr`, the number of neighbours `nb_neighbs`, a kernel `kernel` a diffusion coefficient `mu` and the `dx` and `dy` resolution and outputs the diffusion term."
    ]
   },
@@ -2793,7 +2793,7 @@
     "### Almost there!\n",
     "Now, we know how to compute all the terms of the equation for both the activator and the inhibitor.\n",
     "\n",
-    "### Exercice 17\n",
+    "### Exercise 17\n",
     "Write a function that takes as an input the parameters of the model and returns two arrays of size `size x size x n` with all the computed states of our turing model."
    ]
   },
