everyhting self content

--- a/5-0-Introduction-function.ipynb
+++ b/5-0-Introduction-function.ipynb
@@ -92,6 +92,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d1a35a70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Resources.UsefulFunctions import *\n",
+    "from Resources.Answers import answer, hint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b42612fa",
    "metadata": {},
    "outputs": [],
@@ -134,6 +145,7 @@
    "source": [
     "def compute_AI(): # Don't forget to add arguments\n",
     "    # A, I = [a], [i] \n",
+    "    A, I = [], []\n",
     "    # Uncoment above and\n",
     "    # Do something here\n",
     "    return A, I\n",
