--- a/6-1-From-0D-to-1D.ipynb
+++ b/6-1-From-0D-to-1D.ipynb
@@ -52,6 +52,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10446236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing the numpy library\n",
+    "import numpy as np\n",
+    "# importing the useful functions\n",
+    "from Resources.UsefulFunctions import *\n",
+    "from Resources.Answers import answer, hint\n",
+    "\n",
+    "# and carrying over the previously declared variables\n",
+    "mu_a = 2.8e-4\n",
+    "mu_i = 5e-3\n",
+    "tau = .1\n",
+    "k = -.005\n",
+    "size = 100\n",
+    "dx = dy = 2. / size\n",
+    "T = 9.0\n",
+    "dt = .001\n",
+    "n = int(T / dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2d490913",
    "metadata": {},
    "outputs": [],
