--- a/6-2-Adding-lateral-diffusion.ipynb
+++ b/6-2-Adding-lateral-diffusion.ipynb
@@ -98,6 +98,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56693ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usual reloading of all the previous libraries etc.\n",
+    "\n",
+    "import numpy as np\n",
+    "from Resources.UsefulFunctions import *\n",
+    "from Resources.Answers import answer, hint\n",
+    "\n",
+    "mu_a = 2.8e-4\n",
+    "mu_i = 5e-3\n",
+    "tau = .1\n",
+    "k = -.005\n",
+    "size = 100\n",
+    "dx = dy = 2. / size\n",
+    "T = 9.0\n",
+    "dt = .001\n",
+    "n = int(T / dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0f2def74",
    "metadata": {},
    "outputs": [],
