--- a/7-From-1D-to-2D.ipynb
+++ b/7-From-1D-to-2D.ipynb
@@ -34,6 +34,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62bb860f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing the numpy library\n",
+    "import numpy as np\n",
+    "# importing the useful functions\n",
+    "from Resources.UsefulFunctions import *\n",
+    "from Resources.Answers import answer, hint\n",
+    "\n",
+    "# and carrying over the previously declared variables\n",
+    "mu_a = 2.8e-4\n",
+    "mu_i = 5e-3\n",
+    "tau = .1\n",
+    "k = -.005\n",
+    "size = 100\n",
+    "dx = dy = 2. / size\n",
+    "T = 9.0\n",
+    "dt = .001\n",
+    "n = int(T / dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1e9f92d9",
    "metadata": {},
    "outputs": [],
@@ -462,6 +487,16 @@
     "                               blit=True);\n",
     "\n",
     "HTML(anim.to_jshtml())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5549627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anim.save('My-first-Turing-Pattern.gif')"
    ]
   }
  ],
