--- a/8-Playing-with-the-model.ipynb
+++ b/8-Playing-with-the-model.ipynb
@@ -30,6 +30,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9d626a32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing the numpy library\n",
+    "import numpy as np\n",
+    "from scipy.ndimage import convolve\n",
+    "# importing the useful functions\n",
+    "from Resources.UsefulFunctions import *\n",
+    "from Resources.Answers import answer, hint\n",
+    "\n",
+    "# and carrying over the previously declared variables\n",
+    "mu_a = 2.8e-4\n",
+    "mu_i = 5e-3\n",
+    "tau = .1\n",
+    "k = -.005\n",
+    "size = 100\n",
+    "dx = dy = 2. / size\n",
+    "T = 9.0\n",
+    "dt = .001\n",
+    "n = int(T / dt)\n",
+    "\n",
+    "# redeclaring the diffusion function (put yours here)\n",
+    "def diffusion(arr, nb_neighbs, kernel, mu, dx, dy):\n",
+    "    to_cell = convolve(arr, kernel, mode='constant', cval=0)\n",
+    "    from_cell = nb_neighbs*arr\n",
+    "    out = mu*(to_cell - from_cell)/(dx*dy)\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ccd48929",
    "metadata": {},
    "outputs": [],
