--- a/5-1-File-manipulation.ipynb
+++ b/5-1-File-manipulation.ipynb
@@ -54,6 +54,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "75b06d7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Resources.UsefulFunctions import *\n",
+    "from Resources.Answers import answer, hint\n",
+    "\n",
+    "# Carry over here the previously declared variables and the code from the previous exercises\n",
+    "mu_a = 2.8e-4\n",
+    "mu_i = 5e-3\n",
+    "tau = .1\n",
+    "k = -.005\n",
+    "size = 100\n",
+    "dx = dy = 2. / size\n",
+    "T = 9.0\n",
+    "dt = .001\n",
+    "n = int(T / dt)\n",
+    "\n",
+    "def compute_AI(): # Don't forget to add arguments\n",
+    "    # A, I = [a], [i] \n",
+    "    A, I = [0], [0]\n",
+    "    # Uncoment above and\n",
+    "    # Do something here\n",
+    "    return A, I\n",
+    "\n",
+    "A, I = compute_AI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9d50f8b1",
    "metadata": {},
    "outputs": [],
