--- a/1-Introduction-to-Python/Everything-in-one.ipynb
+++ b/1-Introduction-to-Python/Everything-in-one.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "61b43c36",
    "metadata": {},
    "outputs": [],
@@ -2914,8 +2914,7 @@
     "    ax.imshow(A[..., int(i*n/nb_TP)])\n",
     "    ax.set_axis_off()\n",
     "    ax.set_title(f'Time {int(i*n/nb_TP)*dt}')\n",
-    "fig.tight_layout()\n",
-    "# int(nb_TP**.5)"
+    "fig.tight_layout()"
    ]
   },
   {
@@ -2949,7 +2948,7 @@
     "    im.set_data(A_anim[...,i]);\n",
     "    return(im,)\n",
     "\n",
-    "nb_times_im = 100\n",
+    "nb_times_im = 200\n",
     "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
     "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                               frames=nb_times_im, interval=25, \n",
@@ -3005,7 +3004,7 @@
     "    im.set_data(A_anim[...,i])\n",
     "    return(im,)\n",
     "\n",
-    "nb_times_im = 50\n",
+    "nb_times_im = 200\n",
     "A_anim = A[..., ::A.shape[-1]//nb_times_im]\n",
     "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                               frames=nb_times_im, interval=25, \n",
