switch to MD for website

--- a/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
+++ b/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
@@ -24,7 +24,7 @@
    "id": "d094568e",
    "metadata": {},
    "source": [
-    "# 8 Playing with the model and its parameters"
+    "# 8. Playing with the model and its parameters"
    ]
   },
   {
