--- a/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
+++ b/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
@@ -36,7 +36,7 @@
     "\\mu_a\\Delta a_x = \\mu_a \\frac{a_{x+\\delta x} + a_{x-\\delta x} - 2a_x}{\\delta x}\n",
     "$$\n",
     "\n",
-    "Therefore, after diffusion for a given time $\\delta t$, the concentration $a_x$ becomes is:\n",
+    "Therefore, after diffusion for a given time $\\delta t$, the concentration $a_x$ is:\n",
     "$$\n",
     "a_{x, t+\\delta t} = a_{x, t} + \\delta t\\mu_a\\Delta a_{x,t} = a_{x,t} + \\delta t\\mu_a \\frac{a_{x+\\delta x, t} + a_{x-\\delta x, t} - 2a_{x, t}}{\\delta x}\n",
     "$$\n",
