--- a/1-Introduction-to-Python/4-Some-Exercises.ipynb
+++ b/1-Introduction-to-Python/4-Some-Exercises.ipynb
@@ -111,7 +111,9 @@
     "\n",
     "$$\\delta a = \\delta t (a - a^3 +k)$$\n",
     "\n",
-    "`da_alone` takes as parameters the initial concentration value $a$ (`a`), the $\\delta t$ parameter (`dt`) and the $k$ parameter (`k`) and outputs the differential of concentration $\\delta a$ for that specific initial concentration."
+    "`da_alone` takes as parameters the initial concentration value $a$ (`a`), the $\\delta t$ parameter (`dt`) and the $k$ parameter (`k`) and outputs the differential of concentration $\\delta a$ for that specific initial concentration.\n",
+    "\n",
+    "We are looking at the evolution of the concentration of $a$ over time and that our equation gives us the change of $a$ over a time $\\delta t$"
    ]
   },
   {
@@ -121,10 +123,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 0.1\n",
+    "a = 0.01\n",
     "# Write here the code necessary\n",
     "print(f'{a                            = }')\n",
-    "print( 'Expected value (for a = 0.1) : 0.9974896544606241')"
+    "print( 'Expected value (for a = 0.1) : 0.9971706727639877')"
    ]
   },
   {
@@ -145,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# da_alone??"
+    "da_alone??"
    ]
   },
   {
@@ -167,8 +169,8 @@
    "outputs": [],
    "source": [
     "A = [.01]\n",
-    "print(f'Last value of A (A[-1])           --> {A[-1]}')\n",
-    "print( 'Expected value (for A[-1] = 0.01) --> 0.9971706727639877')"
+    "print(f'Last value of A (A[-1])          --> {A[-1]}')\n",
+    "print( 'Expected value (for A[0] = 0.01) --> 0.9971706727639877')"
    ]
   },
   {
